fixed spacing and colors

--- a/src/components/Inventory/inventory.css
+++ b/src/components/Inventory/inventory.css
@@ -20,14 +20,13 @@
   scroll-margin: 0px;
   scroll-padding: 0px;
   scroll-snap-type: y mandatory;
-  height: 71.3%;
-  width: 95%;
-  column-gap: 50px;
-  row-gap: 40px;
+  height: 70vh;
+  width: 100%;
+  gap: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
   border: 3px solid black;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
   background-color:rgb(152, 151, 151);
@@ -63,8 +62,9 @@
     width: 160px;
     height: 54px;
     margin: 0;
-    font-size: 25px;
+    font-size: 20px;
     text-shadow: 1px 1px white;
+    font-family: 'New Super Mario Font U';
   }
 
   .amountOfItems {
@@ -76,6 +76,7 @@
     text-align: center;
     font-size: 30px;
     margin: 0px;
+    font-family: 'New Super Mario Font U';
   }
 
 
